--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -22,16 +22,17 @@
             <li>
               <h2>Bogota</h2>
               <ul>
-                something some
-              </ul>
-              <ul>
-                something some
+                <li>Page1</li>
+                <li>Page2</li>
+                <li>Page3</li>
               </ul>
             </li>
             <li>
               <h2>Medellin</h2>
               <ul>
-                paisas paisas
+                <li>Page1</li>
+                <li>Page2</li>
+                <li>Page3</li>
               </ul>
             </li>
           </ul>
@@ -40,7 +41,8 @@
           <h3>Amenities</h3>
           <h4>Lorem ipsum dolor</h4>
           <ul class="popover">
-            something something
+            <li>Something</li>
+            <li>Something</li>
           </ul>
         </div>
         <button>
