[Fix] routes to css files and images

--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -5,11 +5,11 @@
     <title>
         AirBNB Clone
     </title>
-    <link rel="stylesheet" href="/styles/3-common.css">
-    <link rel="stylesheet" href="/styles/3-header.css">
-    <link rel="stylesheet" href="/styles/3-footer.css">
+    <link rel="stylesheet" href="styles/3-common.css">
+    <link rel="stylesheet" href="styles/3-header.css">
+    <link rel="stylesheet" href="styles/3-footer.css">
     <link rel="shortcut icon"
-        href="/images/icon.png">
+        href="../images/icon.png">
 
 </head>
 
