--- a/web_static/100-index.html
+++ b/web_static/100-index.html
@@ -4,11 +4,11 @@
     <title>
       AirBNB Clone
     </title>
-    <link rel="stylesheet" href="/styles/4-common.css" />
-    <link rel="stylesheet" href="/styles/3-header.css" />
-    <link rel="stylesheet" href="/styles/3-footer.css" />
-    <link rel="stylesheet" href="/styles/6-filters.css" />
-    <link rel="stylesheet" href="/styles/100-places.css" />
+    <link rel="stylesheet" href="styles/4-common.css" />
+    <link rel="stylesheet" href="styles/3-header.css" />
+    <link rel="stylesheet" href="styles/3-footer.css" />
+    <link rel="stylesheet" href="styles/6-filters.css" />
+    <link rel="stylesheet" href="styles/100-places.css" />
     <link rel="shortcut icon" href="../images/icon.png" />
     <link
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
