--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -5,9 +5,9 @@
     <title>
         AirBNB Clone
     </title>
-    <link rel="stylesheet" href="/styles/2-common.css">
-    <link rel="stylesheet" href="/styles/2-header.css">
-    <link rel="stylesheet" href="/styles/2-footer.css">
+    <link rel="stylesheet" href="styles/2-common.css">
+    <link rel="stylesheet" href="styles/2-header.css">
+    <link rel="stylesheet" href="styles/2-footer.css">
 </head>
 
 <body>
