--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="styles/3-header.css" />
     <link rel="stylesheet" href="styles/3-footer.css" />
     <link rel="stylesheet" href="styles/6-filters.css" />
-    <link rel="shortcut icon" href="../images/icon.png" />
+    <link rel="shortcut icon" href="../images/icon.png" type="image/x-icon">
+
   </head>
 
   <body>
